<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_insert_bottles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="orderit.orderit.insertintents.InsertBottles"
    tools:showIn="@layout/activity_insert_bottles">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="10"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/insert_layout_height">


            <TextView
                android:text="@string/textview_new_bottle"
                android:layout_width="@dimen/insert_textview_width"
                android:layout_height="wrap_content"
                android:id="@+id/textview_new_bottle"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/insert_drink_text_size"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="4"
                android:id="@+id/text_box_insert_bottle"
                android:layout_weight="1" />

            <Button
                android:text="@string/button_new_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/insert_drink_text_size"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlue"
                android:id="@+id/button_new_bottle_size"
                android:visibility="invisible"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/insert_layout_height">


            <TextView
                android:text="@string/textview_new_bottle_size"
                android:layout_width="@dimen/insert_textview_width"
                android:layout_height="wrap_content"
                android:id="@+id/textview_new_bottle_size"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/insert_drink_text_size"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="4"
                android:id="@+id/text_box_insert_bottle_size"
                android:layout_weight="1" />

            <Button
                android:text="@string/button_new_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/insert_drink_text_size"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlue"
                android:id="@+id/button_new_bottle"
                android:onClick="saveNewBottle"
                android:layout_weight="1" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/scrollview_height_bottles"
            android:paddingTop="@dimen/scroll_view_padding"
            android:paddingBottom="@dimen/scroll_view_padding">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearlyout_insert_bottle"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:text="@string/button_leave_insert_drink"
            android:textSize="@dimen/insert_drink_text_size"
            android:textColor="@color/colorBlack"
            android:layout_width="@dimen/insert_drink_leave_button_width"
            android:layout_height="@dimen/insert_drink_leave_button_height"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="leaveInsertBottle"
            android:id="@+id/button_leave_insert_bottle"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>

</RelativeLayout>

